vbnc/vbnc/vbnc/tests/Errors/30311-18.vb
Class T
    Const M_Date As Date = 2US
End Class